test/expected/explain_a_cd_i.out
explain [[carries_dependency]] int x
                               ^
32: error: "carries_dependency" can only appear on functions or function parameters
